fix: portfokio grid gap

--- a/styles.css
+++ b/styles.css
@@ -1251,8 +1251,7 @@
       5.7 * 14px + 6 * 0.85 * (100vw - 2 * 5px - 2 * 25px - 13px) / 2
     );
     grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 14px;
-    grid-column-gap: 13px;
+    grid-gap: 14px;
   }
 
   .portfolio--stripe {
